# emailer

./: .dockerignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
src/: app.py
src/api/: clients.py  emailer.py
src/common/: settings.py
src/core/: emailer.py
src/util/: job_utils.py
src/util/db/: __init__.py  mongo_util.py
src/util/db/mongo_coll/: client_db.py
