[project]
name = "background-tasks-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.10",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
